From Test methods public() removed and Defined Maps again